# ShelfPickSense

./: .gitignore  README.md  main.py  pyproject.toml
configs/: feature_benchmark.example.json  selected_features.example.json
docs/: data-format.md  realtime.md  usage.md
scripts/: analyze_feature_correlation.py  benchmark_features.py
src/analysis/: __init__.py  annotation.py  benchmark.py  cli.py  constants.py  dataset.py  evaluation.py  feature_benchmark.py  feature_correlation.py  labels.py  realtime.py  records.py  rule_baseline.py  rule_collision.py  train.py  tuning.py
src/analysis/features/: __init__.py  base.py  registry.py  rule_engine.py  selection.py  skeleton.py  spatial.py  temporal.py  tracking.py
src/analysis/models/: __init__.py
tests/: fixtures.py  test_dataset.py  test_feature_benchmark.py  test_feature_benchmark_report.py  test_feature_selection.py  test_features.py  test_pipeline.py  test_rule_baseline.py  test_tuning.py
