[project]
name = "analysis"
version = "0.1.0"
description = "货架取货行为分析模型"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "scikit-learn>=1.9.0",
    "joblib>=1.3.0",
    "loguru>=0.7.3",
]

[project.scripts]
analysis = "analysis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis"]

[tool.hatch.build.targets.wheel.sources]
"src/analysis" = "analysis"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
